# cpp-programmer-mindset

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
src/: 01_think.cpp  02_abstraction.cpp
src/01_thinkingcomputationally/: Makefile  main.cpp
